Ensure hidden text doesn't show up on firefox.

--- a/less/diamond-style.less
+++ b/less/diamond-style.less
@@ -112,7 +112,7 @@
 .no-text {
 	// Modern approach: http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/
 	// Changed hide-text to no-text due to bootstrap overlap
-	text-indent: 100%;
+	text-indent: 150%;
 	white-space: nowrap;
 	overflow: hidden;
 }
